--- a/DXApplication1/sysSales/Main/frmMain.resx
+++ b/DXApplication1/sysSales/Main/frmMain.resx
@@ -166,20 +166,23 @@
   <data name="ribbon.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>5, 4, 5, 4</value>
   </data>
+  <data name="ribbonPageGroup1.Text" xml:space="preserve">
+    <value>Test</value>
+  </data>
   <data name="ribbonPage1.Text" xml:space="preserve">
     <value>ribbonPage1</value>
   </data>
   <data name="ribbon.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1354, 182</value>
+    <value>1186, 182</value>
   </data>
   <data name="ribbonStatusBar.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 738</value>
+    <value>0, 670</value>
   </data>
   <data name="ribbonStatusBar.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>5, 4, 5, 4</value>
   </data>
   <data name="ribbonStatusBar.Size" type="System.Drawing.Size, System.Drawing">
-    <value>1354, 29</value>
+    <value>1186, 29</value>
   </data>
   <data name="&gt;&gt;ribbonStatusBar.Name" xml:space="preserve">
     <value>ribbonStatusBar</value>
@@ -205,26 +208,26 @@
   <data name="&gt;&gt;ribbon.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="ribbonPageGroup1.Text" xml:space="preserve">
-    <value>Test</value>
-  </data>
   <metadata name="mdiManager.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="xtraTabbedMdiManager1.AppearancePage.HeaderActive.BackColor" type="System.Drawing.Color, System.Drawing">
+  <data name="mdiManager.AppearancePage.HeaderActive.BackColor" type="System.Drawing.Color, System.Drawing">
     <value>255, 242, 157</value>
   </data>
-  <data name="xtraTabbedMdiManager1.AppearancePage.HeaderActive.Font" type="System.Drawing.Font, System.Drawing">
+  <data name="mdiManager.AppearancePage.HeaderActive.Font" type="System.Drawing.Font, System.Drawing">
     <value>Lucida Fax, 9pt, style=Bold</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>52</value>
+  </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>11, 20</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1354, 767</value>
+    <value>1186, 699</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Lucida Fax, 10.2pt</value>
@@ -292,6 +295,12 @@
   <data name="&gt;&gt;barStaticItem4.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.BarStaticItem, DevExpress.XtraBars.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
+  <data name="&gt;&gt;btnNewForm.Name" xml:space="preserve">
+    <value>btnNewForm</value>
+  </data>
+  <data name="&gt;&gt;btnNewForm.Type" xml:space="preserve">
+    <value>DevExpress.XtraBars.BarButtonItem, DevExpress.XtraBars.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
   <data name="&gt;&gt;ribbonPage1.Name" xml:space="preserve">
     <value>ribbonPage1</value>
   </data>
@@ -309,12 +318,6 @@
   </data>
   <data name="&gt;&gt;mdiManager.Type" xml:space="preserve">
     <value>DevExpress.XtraTabbedMdi.XtraTabbedMdiManager, DevExpress.XtraBars.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
-  </data>
-  <data name="&gt;&gt;btnNewForm.Name" xml:space="preserve">
-    <value>btnNewForm</value>
-  </data>
-  <data name="&gt;&gt;btnNewForm.Type" xml:space="preserve">
-    <value>DevExpress.XtraBars.BarButtonItem, DevExpress.XtraBars.v18.1, Version=18.1.4.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>frmMain</value>
